feat(auth): establish OIDC BFF foundation